# django-master-flix-api

./: README.md  pyproject.toml  tests.py
api/actors/: admin.py  models.py  serializers.py  urls.py  views.py
api/actors/management/commands/: import_actors.py  sync_nationalities.py
api/actors/migrations/: 0001_initial.py  0002_alter_actor_options_alter_nationality_options.py  0003_alter_actor_unique_together.py
api/actors/services/: nationality_service.py
api/actors/tests/: conftest.py  test_actors.py  test_actors_endpoints.py  test_actors_model.py  test_nationality_service.py
api/authentication/: urls.py
api/core/: settings.py  urls.py
api/genres/: models.py  urls.py  views.py
api/genres/management/commands/: import_genres.py
api/genres/migrations/: 0001_initial.py  0002_alter_genre_options.py
api/genres/tests/: conftest.py  test_genres.py  test_genres_model.py
api/movies/: admin.py  models.py  serializers.py  urls.py  views.py
api/movies/migrations/: 0001_initial.py  0002_rename_resume_movie_description.py  0003_alter_movie_options.py
api/movies/tests/: conftest.py  test_movies.py  test_movies_endpoints.py  test_movies_models.py  test_movies_serializers.py
api/reviews/: admin.py  models.py  urls.py  views.py
api/reviews/migrations/: 0001_initial.py
api/reviews/tests/: conftest.py  test_reviews_endpoints.py  test_reviews_model.py
data/: actors.csv  genres.csv
streamlit_app/: app.py
streamlit_app/actors/: page.py  repository.py  service.py  texts.py  types.py
streamlit_app/api/: service.py
streamlit_app/content/: home_text.py
streamlit_app/core/: base_page.py  base_repository.py  types.py  urls.py
streamlit_app/genres/: mock.py  page.py  repository.py  service.py  texts.py  types.py
streamlit_app/home/: page.py  texts.py
streamlit_app/login/: page.py  service.py  texts.py
streamlit_app/movies/: page.py  repository.py  service.py  texts.py  types.py
streamlit_app/reviews/: page.py  repository.py  service.py  texts.py
