[project]
name = "django-master-flix-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "streamlit-aggrid>=1.1.5.post1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "ruff>=0.11.11",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 99
extend-exclude = ['migrations', 'core', 'manage.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR6301', 'I001']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'uv run api/manage.py runserver'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api --cov-report=html -vv'
post_test = 'coverage html'
migrate = 'uv run api/manage.py migrate'
makemigrations = 'uv run api/manage.py makemigrations'
superuser = 'uv run api/manage.py createsuperuser'
streamlit = 'streamlit run streamlit_app/app.py'

[tool.pytest.ini_options]
pythonpath = "./api"
addopts = '-p no:warnings'
DJANGO_SETTINGS_MODULE = 'core.settings'

[tool.coverage.run]
omit = ['*/manage.py', '*/migrations/*']
